fileoperator urlReader